# sandbox

./: .gitignore  .gitmodules  sandbox.sln  sandbox.vcxproj  sandbox.vcxproj.filters
C#/amps-client-excel/Application Files/AMPSExcel_4_3_0_0/: AMPS.Client.dll.deploy  (+3 more)
C#/amps-client-excel/src/: AMPSExcel.csproj
cpp/: sandbox.cpp  sandbox.sln  sandbox.vcxproj  sandbox.vcxproj.filters  test-vs2017-slm.cxx
css/css-grid/: gulpfile.js  index.html  package-lock.json  package.json
css/css-grid/css/: main.css
haskell/: Sandbox.cabal
haskell/src/: Main.hs
java/src/: SandBox.java
javascript/: App.js
javascript/StockFlux/: package-lock.json  package.json
javascript/StockFlux/openfin-config/: app.dev.json
javascript/StockFlux/webpack/: webpack.config.prod.js  webpack.config.shared.js
javascript/d3fcsandbox/: package-lock.json  package.json
javascript/d3fcsandbox/src/: App.js  example-styles.css
javascript/d3sandbox/: chart.html  market_profile.html  market_profile.js  stream_chart.html
javascript/openfin/: installer.txt  package.json  server.js
javascript/openfin-amps-demo/: README.md  app.json  gulpfile.js  package-lock.json  package.json
javascript/openfin-amps-demo/gulp/: config.js
javascript/openfin-amps-demo/openfin-config/: app.dev.json  app.prod.json
javascript/openfin-amps-demo/webpack/: webpack.config.dev.js  webpack.config.prod.js  webpack.config.shared.js
javascript/openfin/src/: app_local.json  index.html
javascript/react-native/: App.js
python/: hackerrank.py
rust/src/: main.rs
src/: SandBox.java  ThreadSafeSingleton.java
(+39 files in other folders)
