name:                 Sandbox
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               per.griffiths
maintainer:           per.griffiths@jpmorgan.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable Sandbox
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base
  hs-source-dirs:       src
  default-language:     Haskell2010
